5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4139/executions/1637_1054.log
== TEST (2019-04-04 21:59:51) 
-- CODE:
x=float(input("cordenadas X:"))
y=float(input("cordenadas y:"))

ponto=(2*x+y=3)

if (ponto == 3):
	msg = ("ponto pertence a reta")
else:
	msg = ("ponto nao pertence a reta")

print(msg)
-- ERROR:
File "XXXX", line 4
    ponto=(2*x+y=3)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 22:01:17) 
-- CODE:
x = float(input("cordenadas X:"))
y = float(input("cordenadas y:"))

ponto = ((2*x) + y)

if (ponto == 3):
	msg = ("ponto pertence a reta")
else:
	msg = ("ponto nao pertence a reta")

print(msg)
-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 22:01:46) 
-- CODE:
x = float(input("cordenadas X:"))
y = float(input("cordenadas y:"))

ponto = ((2*x) + y)

if (ponto == 3):
	msg = ("ponto pertence a reta")
else:
	msg = ("ponto nao pertence a reta")

print(msg)
-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 22:02:14) 
-- CODE:
x = float(input("cordenadas X:"))
y = float(input("cordenadas y:"))

ponto = ((2*x) + y)

if (ponto == 3):
	msg = ("ponto pertence a reta")
else:
	msg = ("ponto nao pertence a reta")

print(msg)
-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 22:02:24) 
-- CODE:
x = float(input("cordenadas X:"))
y = float(input("cordenadas y:"))

ponto = ((2*x) + y)

if (ponto == 3):
	msg = ("ponto pertence a reta")
else:
	msg = ("ponto nao pertence a reta")

print(msg)
-- EXECUTION TIME:
0.14821
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:55:47) 
-- CODE:
x = float(input("cordenadas X:"))
y = float(input("cordenadas y:"))

ponto = ((2*x) + y)

if (ponto == 3):
	msg = ("ponto pertence a reta")
else:
	msg = ("ponto nao pertence a reta")

print(msg)
-- EXECUTION TIME:
0.208881
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
